// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reducer: repos when a repos request is pending should set isPending to true 1`] = `
Object {
  "isPending": true,
}
`;

exports[`Reducer: repos when a repos request is successful should update the state with the repos 1`] = `
Object {
  "error": null,
  "isPending": false,
  "result": Array [
    1,
    2,
    3,
  ],
}
`;

exports[`Reducer: repos when a search request fails should update the state with the error message 1`] = `
Object {
  "error": [Error: the server died],
  "isPending": false,
}
`;

exports[`Reducer: repos when passed no state should return the initial state 1`] = `
Object {
  "error": null,
  "isPending": true,
  "result": Array [],
}
`;
